@@ -61,6 +61,9 @@ case "$CMD" in
 	su -c "$DAEMON $DMNOPTS stop" - xymon
 	echo "$NAME."
 	;;
+  status)
+	su -c "$DAEMON $DMNOPTS status" - xymon
+	;;
   restart)
 	echo -n "Restarting $DESC: "
 	su -c "$DAEMON $DMNOPTS stop" - xymon
