@@ -23,6 +23,8 @@ Changes from 4.3.24 -> 4.3.25 (XX Jan 2016)
   to create dynamic lists (Suggested by Jeremy Laidman)
 * The "Valid Until" time for an acknowledgement is now displayed on the ack log
   report page (Thanks, Dominique Frise)
+* The xymon.sh and runclient.sh scripts are themselves now more LSB compliant 
+  (Thanks, Nikolai Lifanov)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
